# dictool

./: .clang-format  .clang-tidy  CMakeLists.txt  Makefile  README.md
cmake/: dictoolConfig.cmake.in
include/dictool/: Aglorithm.h  MultiDict.h
tests/: CMakeLists.txt
tests/src/aglorithm/: other.cc  reverse.cc
tests/src/multidict/: constructor.cc  erase.cc  fixture.h  insert.cc  instance.cc  iterator.cc  misc.cc  search.cc
